# image-to-text

./: .gitignore  pyproject.toml
.github/workflows/: CI.yml
src/: config.py  utils.py
src/HTR/: creat_correction_csv.py  create_manual_csv.py  download_data.py  pipeline.py
src/Marike/: creat_jsonl_from_xml.py  create_csv_for_pecha_tools.py
src/annotation_transfer/: get_outline_for_work.py  transfer_annotation.py
src/line_image_to_text/: check.ipynb  config.py  create_csv.py  create_csv_batch.py  create_csv_dbeaver.py  create_csv_for_pecha_tools.py  create_csv_from_jsonl.py  create_num_csv.py  create_text_file_for_lines.py  download_images.py  download_images_bdrc.py  filter_images_and_create_csv.py  filter_unusable_data_from_norbuketaka.py  filter_work.py  filter_work_2.py  get_transcription_diff_count.py  line_to_text_formatter.py  list_images.py  log_reorganized_input.py  multi_pipeline.py  ocr_line_image_and_rearrange_json.py  p1_reorganize.py  p2_download_images_bdrc.py  p3_reorganise_image.py  p4_rearrange_json.py  p5_filter_work.py  p6_csv_create.py  parse_prodigy_rechecked_data.py  parse_rechecked_data.py  pipeline.py  rearrange_input.py  rearrange_monlam.py  reorganize.py  reorganize_input.py  upload_line_images.py
src/ocr_post_processing/: filter_the_inference.py
tests/: test_example.py  test_filter_work.py  test_rearrange.py
tests/test_data/test_image/: test_image.json
tests/test_data/work/: rearranged_work.json  work.json
